tests/js_error/source_locations/expression/object/literal_copy_data_properties.exp
Error: 
  ┌ tests/js_error/source_locations/expression/object/literal_copy_data_properties.js:3:11
  |
3 |     throw new Error()
  |           ^
Stack trace:
  at getOwnPropertyDescriptor (tests/js_error/source_locations/expression/object/literal_copy_data_properties.js:3:11)
  at <global> (tests/js_error/source_locations/expression/object/literal_copy_data_properties.js:10:4)