tests/js_error/source_locations/expression/object/literal_copy_data_properties.js
var proxy = new Proxy({}, {
  getOwnPropertyDescriptor() {
    throw new Error()
  },
  ownKeys() {
    return ['a']
  }
});

({ ...proxy });